--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+title: Patrick Cannon
+logo: /assets/img/Patrick_BW_square.png
+description: ""
 show_downloads: true
-google_analytics:
+google_analytics: true
 theme: jekyll-theme-minimal
