--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ google_analytics: true
 theme: jekyll-theme-minimal
 permalink: pretty
 # Eclude CV from navigation
-exclude:
-  - cv.md
+# exclude:
+#   - cv.md
